# mcpacker

./: .gitignore  AGENTS.md  Cargo.toml  README-zh.md  README.md
.github/: dependabot.yml
docs/: architecture.md  modpack-support.md  troubleshooting.md
docs/releases/: v26.4.10.md
src/: installer.rs  main.rs  utils.rs
src/models/: mod.rs
src/ops/: downloader.rs  generator.rs  installer.rs  mod.rs  utils.rs
src/parsers/: curseforge.rs  filter.rs  mod.rs  modrinth.rs
src/ui/: mod.rs
