[package]
name = "mcpacker"
version = "0.1.0"
edition = "2024"
authors = ["Jerry Zheng <littlepenguinzq@gmail.com>"]
description = "A command-line tool to convert client modpacks into ready-to-run Minecraft servers"
repository = "https://github.com/littlepenguin66/mcpacker"
license = "AGPL-3.0-or-later"
keywords = ["cli", "minecraft", "modpack", "server", "rust"]
readme = "README.md"

[[bin]]
name = "mcpacker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.54", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions"] }
console = "0.16.2"
dialoguer = "0.12.0"
directories = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["json", "stream", "cookies", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.18"
urlencoding = "2.1.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "process", "io-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "0.9.11"
url = "2.5"
zip = "7.2.0"
json5 = "1.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
